--- a/LiveChartsWPFTest/SimpleLiveChart/SimpleLiveChart/packages.config
+++ b/LiveChartsWPFTest/SimpleLiveChart/SimpleLiveChart/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Expression.Blend.Sdk.WPF" version="1.0.1" targetFramework="net461" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
+  <package id="MicrosoftExpressionInteractions" version="3.0.40218.0" targetFramework="net461" />
 </packages>
